[gd_scene load_steps=12 format=3 uid="uid://b2bcbmdnji16"]

[ext_resource type="Script" path="res://ball_tuto.gd" id="1_bfbs5"]
[ext_resource type="AudioStream" uid="uid://c5ck05140eb2w" path="res://Assets/Audio/BallTutorial.mp3" id="2_ql85t"]
[ext_resource type="Texture2D" uid="uid://e5lglvkofcqg" path="res://Assets/BallGame/BallgameFondo.png" id="3_wfqpx"]
[ext_resource type="Texture2D" uid="uid://mdmy554x2nqw" path="res://Assets/BallGame/allen3.png" id="4_cge8y"]
[ext_resource type="Texture2D" uid="uid://tws4lmwmvklt" path="res://Assets/BallGame/allen2.png" id="5_2e3bk"]
[ext_resource type="Texture2D" uid="uid://baqw51uuk6cqv" path="res://Assets/BallGame/allen1.png" id="6_rmk5g"]
[ext_resource type="Texture2D" uid="uid://djxbnum7src7s" path="res://Assets/BallGame/kids1.png" id="7_a3ftl"]
[ext_resource type="Texture2D" uid="uid://d2sj5f00breqn" path="res://Assets/BallGame/kids2.png" id="8_xtwjm"]
[ext_resource type="Texture2D" uid="uid://bokan5a70vpqh" path="res://Assets/BallGame/kids3.png" id="9_47pro"]
[ext_resource type="Texture2D" uid="uid://bnv1158s6atfx" path="res://Assets/BallGame/kids4.png" id="10_bo0ey"]
[ext_resource type="Texture2D" uid="uid://v7tpn0n5yy0g" path="res://Assets/BallGame/kids5.png" id="11_67k7h"]

[node name="BallTuto" type="Node2D"]
script = ExtResource("1_bfbs5")

[node name="FadeRect" type="ColorRect" parent="."]
z_index = 2
offset_top = 1.0
offset_right = 618.0
offset_bottom = 347.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ql85t")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(288, 162)
texture = ExtResource("3_wfqpx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 162)
zoom = Vector2(1.5, 1.5)

[node name="AllenDibujo3" type="Sprite2D" parent="."]
position = Vector2(-35.5, 196.5)
texture = ExtResource("4_cge8y")
offset = Vector2(191, 34)

[node name="AllenDibujo2" type="Sprite2D" parent="."]
position = Vector2(4.5, 187.5)
texture = ExtResource("5_2e3bk")
offset = Vector2(191, 34)

[node name="AllenDibujo" type="Sprite2D" parent="."]
position = Vector2(-47.5, 187.5)
texture = ExtResource("6_rmk5g")
offset = Vector2(191, 34)

[node name="KidsDibujo" type="Sprite2D" parent="."]
position = Vector2(439, 131)
texture = ExtResource("7_a3ftl")

[node name="KidsDibujo2" type="Sprite2D" parent="."]
position = Vector2(434, 126)
texture = ExtResource("8_xtwjm")

[node name="KidsDibujo3" type="Sprite2D" parent="."]
position = Vector2(390, 148)
texture = ExtResource("9_47pro")

[node name="KidsDibujo4" type="Sprite2D" parent="."]
position = Vector2(420.5, 131)
scale = Vector2(1.00602, 1)
texture = ExtResource("10_bo0ey")

[node name="KidsDibujo5" type="Sprite2D" parent="."]
position = Vector2(420.5, 131)
scale = Vector2(1.00602, 1)
texture = ExtResource("11_67k7h")

[node name="Text" type="Label" parent="."]
offset_left = -34.0
offset_top = 1.0
offset_right = 609.0
offset_bottom = 50.0
text = "Esto es un tutorial. 
Â¡Pulsa el espacio para atrapar la pelota en el momento correcto!"
horizontal_alignment = 1

[node name="ReadyButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 287.0
offset_right = 571.0
offset_bottom = 318.0
text = "Estoy Listo"

[node name="DelayLabel" type="Label" parent="."]
offset_left = 376.0
offset_top = 261.0
offset_right = 461.0
offset_bottom = 284.0
text = "Delay: 0ms"

[node name="ButtonContainer" type="HBoxContainer" parent="."]
offset_left = 396.0
offset_top = 287.0
offset_right = 436.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DecreaseButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
focus_mode = 0
text = "<"

[node name="IncreaseButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
focus_mode = 0
text = ">"
